--- a/index.html
+++ b/index.html
@@ -52,12 +52,15 @@
   .equipo { min-width: 180px; font-size: 14px; }
   .resto { font-size: 14px; }
 
+  /* Ajuste de columna Puntos para que siempre sea 14px bold */
+  td.puntos { font-size: 14px; font-weight: bold; }
+
   /* Logos de Marca */
   .marca img {
-    max-height: 46px; /* 50px fila - 2px arriba - 2px abajo */
+    max-height: 46px; /* fila 50px menos 2px arriba y 2px abajo */
     height: auto;
     display: block;
-    margin: 2px auto; /* margen vertical 2px, centrado horizontal */
+    margin: 2px auto; /* centrado horizontal y margen vertical */
     object-fit: contain;
   }
 
@@ -67,6 +70,7 @@
     .estilo2 { font-size: 20px; }
     .estilo3 { font-size: 12px; }
     .estilo4 { font-size: 12px; }
+    td.puntos { font-size: 12px; }
     .marca img { max-height: 24px; }
     .equipo { min-width: 140px; }
   }
@@ -114,7 +118,8 @@ fetch(url)
 
         // Asignar clases por columna
         if (cols[i] === "Posición") td.className = "estilo2";
-        else if (cols[i] === "Piloto" || cols[i] === "Puntos") td.className = "estilo3";
+        else if (cols[i] === "Piloto") td.className = "estilo3";
+        else if (cols[i] === "Puntos") td.className = "estilo3 puntos"; // Puntos en 14px bold
         else if (cols[i] === "#") td.className = "estilo4";
         else if (cols[i] === "Equipo") td.className = "equipo";
         else if (cols[i] === "Marca") td.innerHTML = `<img src="${value}" alt="Marca">`;
