--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
     height: 42px;
     max-height: 42px;
     min-height: 42px;
+    line-height: 38px; /* 42px - 2px arriba/abajo */
     overflow: hidden;
     box-sizing: border-box;
-    display: flex;           /* Para centrar contenido */
-    justify-content: center; /* Centrado horizontal */
-    align-items: center;     /* Centrado vertical */
+    vertical-align: middle;
   }
 
   th {
